# article-label-maker

./: .gitignore  README.md  analysis.md  docker-compose.yml  few_shot_prompts.py  init-ollama.sh  package.json  test-docker.sh
api/: .dockerignore  Dockerfile  README.md  cli.py  csv_processor.py  main.py  metrics_service.py  pyproject.toml  sample_articles.csv  schemas.py  services.py  test_articles_with_empty.csv
api/app/: __init__.py
api/app/classifiers/: __init__.py  classifier_base.py  few_shot_prompting.py  few_shot_prompts.py  zero_shot.py
api/app/config/: schemas.py  settings.py
api/app/services/: classification.py  csv_processor.py
app/: globals.css
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: dashboard.tsx
frontend/services/: api.ts
services/: api.ts
