[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic-settings>=2.10.1",
    "gliclass>=0.1.11",
]
